--- a/DungeonKeep/package.json
+++ b/DungeonKeep/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "dungeon-keep",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.1.0",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
